fix table overflow in create project page. Ensure that existing projects have an edit button, while new projects have an add button in Create Project page. Added Delete project button.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,9 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+
+.project-create-table.table tbody > tr > td,
+.project-create-table.table tbody > tr > th {
+  white-space: normal;
+}
